# power_carrier

./: .gitignore  README.md
proj/: README.md
proj/hex/: host_a.hex  host_b.hex  host_c.hex  slave.hex  slave1.hex  slave2.hex  slave3.hex  slave4.hex
proj/include/: communication.h  crc16.h  instructions.h  lcd1602.h  serialport.h  serialport_2.h  utility.h
proj/keil_host/: __config__.h  host.uvproj  main.c
proj/keil_host/Objects/: host.hex
proj/keil_host_a/: __config__.h  host.uvproj  main.c
proj/keil_host_b/: __config__.h  host.uvproj  main.c
proj/keil_host_c/: __config__.h  host.uvproj  main.c
proj/keil_slave/: __config__.h  main.c  slave.uvproj  slaves.h
proj/keil_slave/Objects/: slave.hex  slave1.hex  slave2.hex  slave3.hex  slave4.hex
proj/proteus/: power_carrier.pdsprj
proj/src/: communication.c  crc16.c  global.c  lcd1602.c  serialport.c  serialport_2.c  utility.c
qt/abandon/: communication.cpp  communication.h  mainwindow_2.cpp  mainwindow_2.h  safetools.h  serialport.h
qt/power_carrier/: CMakeLists.txt  _res.qrc  comrangedialog.cpp  comrangedialog.h  comrangedialog.ui  configurations.h  controlwidget.cpp  controlwidget.h  controlwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  safetools.cpp  serialport.cpp  serialport.h  serialportmanager.cpp  serialportmanager.h  testruntime.hpp
qt/power_carrier/abandon/: communication.cpp  communication.h  mainwindow_2.cpp  mainwindow_2.h  serialport.cpp  serialport.h  testruntime.hpp
qt/power_carrier/db/: aaa.db  ccc.db  test.db
qt/power_carrier/include/dialog/: addslavedialog.h  comrangedialog.h  newdbfiledialog.h
qt/power_carrier/include/model/: sqltablemodel.h
qt/power_carrier/include/object/: comlist.h  configurations.h  crc16.h  keywords.h  serialportmanager.h  serialportworker.h
qt/power_carrier/include/widget/: mainwidget.h  serialportwidget.h  sqlitewidget.h  waittablewidget.h
qt/power_carrier/res/: _res.qrc
qt/power_carrier/res/font_family/: README.md
qt/power_carrier/res/iconfont/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
qt/power_carrier/share/: config.ini
qt/power_carrier/src/dialog/: addslavedialog.cpp  comrangedialog.cpp  newdbfiledialog.cpp
qt/power_carrier/src/main/: main.cpp
qt/power_carrier/src/model/: sqltablemodel.cpp
qt/power_carrier/src/object/: comlist.cpp  configurations.cpp  crc16.cpp  serialportmanager.cpp  serialportworker.cpp
qt/power_carrier/src/widget/: mainwidget.cpp  serialportwidget.cpp  sqlitewidget.cpp  waittablewidget.cpp
qt/power_carrier/ui/dialog/: addslavedialog.ui  comrangedialog.ui  newdbfiledialog.ui
qt/power_carrier/ui/widget/: mainwidget.ui  serialportwidget.ui  sqlitewidget.ui  waittablewidget.ui
